# seafile

./: README.md  RELEASE.md  cloudbuild-kaniko.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
config/: ccnet.conf  gunicorn.conf.py  seafile.conf  seahub_settings.py
docker/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
docker/nginx/: log.conf  seafile_443.conf
docker/nginx/conf.d/: upstream.conf
docs/: changelog.rst
