[tool.autopub]
project-name = "seafile-ce-server"
git-username = "campbellmc"
git-email = "campbell@dxclabs.com"
changelog-file = "docs/changelog.rst"
changelog-header = "###############"
version-header = "="
version-strings = []
build-system = "poetry"

[tool.poetry]
name = "seafile-ce-server"
version = "1.8.0"
description = "seafile server in a docker container"
authors = ["DXCLABS LTD"]

[tool.poetry.dependencies]
python = "^3.11"
Django = ">=3.2.0,<3.3.0"
Jinja2 = "^3.1.2"
Pillow = "^9.3.0"
SQLAlchemy = "1.4.3"
captcha = "^0.4"
cffi = "^1.15.1"
django-pylibmc = "^0.6.1"
django-simple-captcha = "^0.5.17"
gunicorn = "^20.1.0"
mysqlclient = "^2.1.1"
pycryptodome = "3.12.0"
pylibmc = "^1.6.3"
python3-ldap = "^0.9.8.4"

[tool.poetry.group.dev.dependencies]
autopub = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
