[tool.autopub]
project-name = "seafile-ce-server"
git-username = "campbellmc"
git-email = "campbell@dxclabs.com"
changelog-file = "docs/changelog.rst"
changelog-header = "###############"
version-header = "="
version-strings = []
build-system = "poetry"

[tool.poetry]
name = "seafile-ce-server"
version = "1.9.0"
description = "seafile server in a docker container"
authors = ["DXCLABS LTD"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
Markdown = "^3.4"
bleach = "^5.0"
captcha = "^0.5"
cffi = "1.15.1"
chardet = "^5.1"
django-pylibmc = "^0.6.1"
django-statici18n = "^2.3"
django_formtools = "^2.4"
django_picklefield = "^3.1"
django_simple_captcha = "^0.6"
django_webpack_loader = "^1.7"
djangorestframework = "^3.14"
djangosaml2 = "^1.5"
future = "^0.18"
gunicorn = "^20.1"
mysqlclient = "^2.1"
openpyxl = "^3.0"
pycryptodome = "^3.20"
pyjwt = "^2.6"
pylibmc = "^1.6.3"
pypinyin = "^0.50"
pysaml2 = "^7.2"
python-cas = "^1.6"
python-dateutil = "^2.8"
# ldap3 = "^3.4"
qrcode = "^7.3"
requests = "^2.31"
requests_oauthlib = "^1.3"

[tool.poetry.group.dev.dependencies]
autopub = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
